Tiny fix to vertical button spacing per comment #1750

--- a/scss/components/_results-framework.scss
+++ b/scss/components/_results-framework.scss
@@ -114,7 +114,7 @@
     }
 }
 .level-list--expandos {
-    margin-bottom: $grid-gutter-width;
+    margin-bottom: $grid-gutter-width/2;
 }
 // # from level_cards.js
 .level-card {
